# esp32-tts

./: .cnb.yml  .gitignore  Cargo.toml  build.rs  build.sh  diagram.json  flash.bat  flash.sh  partitions.csv  readme.md  sdkconfig.defaults  setup-env.sh  setup-idf.sh  web-flash.sh  wokwi.toml
.cargo/: config.toml
.ide/: Dockerfile  nginx.conf
assets/: index.html
components/esp_sr/: bindgen.h
components/lvgl-configs/: lv_conf.h
custom-fonts/: simhei.h
src/: audio.rs  btn.rs  button.rs  global.rs  main.rs  server.rs  tts.rs  ui_lvgl.rs  utils.rs  wifi.rs
