[package]
name = "etts"
version = "0.1.0"
authors = ["pai2s <pai2gsg@gmail.com"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "etts"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-sys = "0.36"

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

anyhow = "1.0.99"

# LVGL
lvgl = { version = "0.6.2", default-features = false, features = [
    "embedded_graphics",
    "unsafe_no_autoinit",
    #"lvgl_alloc",
    #"alloc"
] }

lvgl-sys = { version = "0.6.2" }

# C String
cstr_core = "0.2.1"
cc = "1.2.35"

[build-dependencies]
embuild = "0.33"

# [[package.metadata.esp-idf-sys.extra_components]]
# remote_component = { name = "espressif/esp-sr", version = "^2.0.0" }
# bindings_header = "components/esp_sr/bindgen.h"
# bindings_module = "esp_sr"

[patch.crates-io]
lvgl = { git = "https://github.com/enelson1001/lv_binding_rust" }
lvgl-sys = { git = "https://github.com/enelson1001/lv_binding_rust" }
